--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -1,17 +1,17 @@
 @font-face 
-  font-family: 'icomoon'
-  src:  url('fonts/icomoon.eot?x1480g')
-  src:  url('fonts/icomoon.eot?x1480g#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?x1480g') format('truetype'),
-    url('fonts/icomoon.woff?x1480g') format('woff'),
-    url('fonts/icomoon.svg?x1480g#icomoon') format('svg')
+  font-family: 'sell-icon'
+  src:  url('../fonts/sell-icon.eot?6u6oal')
+  src:  url('../fonts/sell-icon.eot?6u6oal#iefix') format('embedded-opentype'),
+    url('../fonts/sell-icon.ttf?6u6oal') format('truetype'),
+    url('../fonts/sell-icon.woff?6u6oal') format('woff'),
+    url('../fonts/sell-icon.svg?6u6oal#sell-icon') format('svg')
   font-weight: normal
   font-style: normal
 
 
 [class^="icon-"], [class*=" icon-"] 
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important
+  font-family: 'sell-icon' !important;
   speak: none
   font-style: normal
   font-weight: normal
@@ -53,4 +53,6 @@
 
 .icon-thumb_up:before 
   content: "\e909"
+
+
 
